--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,11 +1,17 @@
 .appBar {
     background-color: blueviolet;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 10px;
 }
 
 .appBar .heading {
     margin: 0;
     padding: 8px;
+    display: inline-block;
 }
 
 .heading {
@@ -25,4 +31,8 @@ nav a:hover {
     color: green;
     text-decoration: underline;
     font-weight: bold;
+}
+
+.btnServerStatus{
+    zoom: .8;
 }
